--- a/css/main.css
+++ b/css/main.css
@@ -8,27 +8,33 @@
   width: 100%;
   background-color: rgb(242, 242, 242);
 }
-#home-main-title {
+
+.home-main-title {
   padding-top: 20px;
   padding-bottom: 20px;
 }
+
 /*top bar*/
 .main-header {
   background-color: White;
   padding-top: 20px;
 }
+
 ul {
   list-style-type: none;
   left: 40%;
   position: fixed;
 }
+
 li {
   display: inline;
   margin: 10px;
 }
+
 li a {
   color: Black;
 }
+
 li a:hover, .active {
   border-bottom: 2px solid LightBlue;
   padding-bottom: 10px;
@@ -36,6 +42,7 @@ li a:hover, .active {
   color: Black;
 
 }
+
 /*checkboxs and radiobuttons group*/ 
 .form-check {
   position: relative;
@@ -44,11 +51,13 @@ li a:hover, .active {
   margin-bottom: 10px;
   cursor: pointer;
 }
+
 .form-check input {
   position: absolute;
   opacity: 0;
   cursor: pointer;
 }
+
 .checkmark {
   position: absolute;
   top: 5px;
@@ -59,17 +68,21 @@ li a:hover, .active {
   border: 2px solid Gray;
   border-radius: 2px;
 }
+
 .form-check input:checked ~ .checkmark {
   background-color: DarkGray;
 }
+
 .checkmark:after, .radiobutton:after {
   content: "";
   position: absolute;
   display: none;
 }
+
 .form-check input:checked ~ .checkmark:after, .form-check input:checked ~ .radiobutton:after {
   display: block;
 }
+
 .form-check .checkmark:after {
   left: 2px;
   top: 0px;
@@ -81,6 +94,7 @@ li a:hover, .active {
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
 }
+
 .radiobutton {
   position: absolute;
   top: 5px;
@@ -91,6 +105,7 @@ li a:hover, .active {
   background-color:White;
   border-radius: 50%;
 }
+
 .form-check .radiobutton:after {
   left: 2px;
   top: 2px;
@@ -99,9 +114,11 @@ li a:hover, .active {
   border-radius: 50%;
   background: Gray;
 }
+
 .form-check input:checked ~ .radiobutton {
   background-color: White;
 }
+
 /**filter's titles*/
 .filter-title-container {
   text-align: center;
@@ -110,38 +127,48 @@ li a:hover, .active {
   border-color: LightGray;
   border-width: 1px;
 }
-.filter-title {
+
+.filter-title-container__title {
   display: inline-block;
 }
-.filter-subtitle {
+
+.filter__filter-subtitle {
   margin: 20px 0px 5px 5px;
 }
+
 /*icons and logo*/
-#company-logo {
+.company-logo {
   display: inline;
   margin-left: 10px;
   padding-bottom: 10px;
   width: 40px;
   height: 40px;
 }
-#pages-title {
+
+.pages-title {
   display: inline;
 }
+
 .icons {
   font-size: 1em;
   color: DarkGray;
   cursor: pointer;
 }
+
 .icons:hover {
   color: Gray;
 }
+
 .close-icon {
+  display: inline;
   float: right;
   margin-right: 10px;
 }
+
 .sort-icon {
   display: none;
 }
+
 /*sidenav styles*/
 .sidenav {
   height: 100%;
@@ -159,11 +186,13 @@ li a:hover, .active {
   border-color: LightGray;
   border-width: 1px;
 }
+
 @media screen and (max-height: 450px) {
   .sidenav {
     padding-top: 15px;
   }
 }
+
 /*top bar styles*/
 @media screen and (max-width: 375px) {
   li {
@@ -173,10 +202,11 @@ li a:hover, .active {
   .main-header {
     padding-top: 0px;
   }
-  #company-logo {
+  .company-logo {
     margin-top: 20px;
   }
 }
+
 /*print styles*/
 @media print {
   .sidenav {
@@ -185,13 +215,14 @@ li a:hover, .active {
   .child1, .child2 {
       border: 2px solid rgb(0, 0, 0);
   }
-  .icons, #pages-title {
+  .icons, .pages-title {
     display: none;
   }
-  #home-main-title {
+  .home-main-title {
     text-align: center;
   }
 }
+
 /*table styles*/
 table {
   border-collapse: collapse;
@@ -202,6 +233,7 @@ table {
   left: 5%;
   border-spacing: 5px;
 }
+
 th {
   width: 110px;
   font-size: 12px;
@@ -209,18 +241,22 @@ th {
   text-align: center;
   align-content: center
 }
+
 .title-th {
    text-align: start;
 }
+
 .table-header {
   text-align: center;
   padding-bottom: 10px;
   cursor: pointer;
 }
+
 .table-header:hover .sort-icon {
   display: inline;
 
 }
+
 .result {
   background-color: LightGray;
   width: 40px;
@@ -229,6 +265,7 @@ th {
   padding-top: 2px;
   text-align: center;
 }
+
 /*flex containers*/
 .flex-container1 {
   display:  inline-flex;
@@ -236,11 +273,13 @@ th {
   max-width: 500px;
   justify-content: center;
 }
+
 .flex-container2 {
   display:  inline-flex;
   flex-flow: row wrap;
   justify-content: center;
 }
+
 .child1 {
   background-color: White;
   position: relative;
@@ -251,6 +290,7 @@ th {
   margin-right: 10px;
   margin-bottom: 8px;
 }
+
 .child2 {
   background-color: White;
   position: relative;
@@ -262,14 +302,17 @@ th {
   margin-bottom: 8px;
   
 }
+
 .child1:hover, .child2:hover{
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
+
 .container {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
 }
+
 /*tiles styles*/
 .tile-title {
   font-size: 18px;
