--- a/css/main.css
+++ b/css/main.css
@@ -113,6 +113,7 @@
 
 /*icons and logo*/
 .company-logo {
+	float: left;
 	width: 40px;
 	height: 40px;
 }
@@ -302,6 +303,7 @@ th {
 .burger-menu__button { 
 	display: none;
 	padding-bottom: 10px;
+	padding-left: 10px;
 	color: gray;
 }
 
@@ -360,50 +362,10 @@ th {
 
 /*top bar styles*/
 /*
-@media screen and (max-width: 450px) {
-	.burger-menu__button {
-		display: inline-flex;
-	}
-	.pages-titles {
-		visibility: hidden;
-	}
-}*/
-
-/*dropdown styles*/
-/*
-.dropdown-content {
-	display: none;
-	position: absolute;
-	background-color: white;
-	min-width: 160px;
-	box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
-	z-index: 1;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.dropdown-content a:hover {background-color: #f1f1f1;}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-.dropbtn {
-  display: inline-block;
-  color: black;
-  text-decoration: none;
-}
-*/
 .pages-titles {
 	list-style: none;
 	padding: 0;
-	text-align: center;
+	white-space: nowrap;
 }
 
 .overflow {
@@ -411,6 +373,7 @@ th {
 	right: 0;
 	display: none;
 	z-index: 25;
+	top: 70px;
 }
 
 .overflow li{
@@ -425,33 +388,134 @@ th {
 	float: right;
 }
 
-.overflow li:hover {background-color: #f1f1f1;}
+.overflow li:hover {
+	background-color: #f1f1f1;
+}
 
 .main-header {
 	background-color: white;
 	padding-top: 20px;
 	height: 70px;
 	position: relative;
-	max-width: 700px;
-	margin:0 auto;
+	max-width: 750px;
+	margin: 0 auto;
+	display: flex;
+	align-items: center;
 }
 
-li {
-	display: inline;
+li {	
+	display: inline-block;
 	width: 100px;
 	text-align:center;
 	font-size: 20px;
 	padding-left: 10px;
+	text-overflow: ellipsis;
+	overflow: hidden;
+	cursor: pointer;
+	white-space: nowrap;
+}
+
+
+li:hover {	 
+	position: absolute;
+    width: auto;
+    background-color:#FFF;
+}
+
+li:hover + li {
+	margin-left: 100px;
 }
 
 li a {
-	color: black;
+	color: gray;
 }
 
 li a:hover, .active {
-	border-bottom: 2px solid LightBlue;
 	text-decoration: none;
+	color: black;
+	border-bottom: 2px solid lightblue;
+}
+*/
+
+.main-header {
+	height: 60px;
+}
+
+.nav_titles {
+	position: relative;
+	height: 50px;
+	display: flex;
+	align-items: center;
+	background: white;
+	margin-top: 20px;
+}
+
+.nav_titles button {
+	background: none;
+	border: none;
+	outline: none;
+	padding-bottom: 15px;
+	margin-right: 30px;
+}
+
+.pages-titles {
+	list-style: none;
+	display: flex;
+	justify-content: center;
+	flex: 1;
+	overflow: hidden;
+}
+
+.pages-titles li {
+	flex: none;
+	padding-left: 10px;
+	max-width: 150px;
+	text-overflow: ellipsis;
+	overflow: hidden;
+	cursor: pointer;
+	white-space: nowrap;
+}
+.pages-titles li:hover{
+	overflow: auto; 
+	height: auto;
+	white-space: normal;
+	word-break: break-all;
+}
+
+.pages-titles li:hover + .pages-titles li{
+	padding-left: 100px; 
+}
+
+.pages-titles li a {
 	color: black;
 }
 
+.overflow {
+	position: absolute;
+	background: white;
+	right: 0;
+	z-index: 25;
+	top: 100%;
+	list-style: none;
+}
 
+.overflow li a {
+	color: black;
+}
+
+.overflow.hidden {
+	display: none;
+}
+
+.overflow li {
+	margin: 0px 5px 5px;
+}
+/*
+@media screen and (max-width: 450px) {
+	.burger-menu__button {
+		display: inline-flex;
+	}
+	.pages-titles {
+		visibility: hidden;
+	}
+}*/
