--- a/css/main.css
+++ b/css/main.css
@@ -302,8 +302,7 @@ th {
 
 .burger-menu__button { 
 	display: none;
-	padding-bottom: 10px;
-	padding-left: 10px;
+	padding: 25px 10px 10px;
 	color: gray;
 }
 
@@ -317,7 +316,7 @@ th {
 
 .burger-menu__nav {
 	padding-top: 30px;
-	position: fixed;
+	position: absolute;
 	z-index: 3;
 	display: flex;
 	flex-flow: column;
@@ -325,6 +324,7 @@ th {
 	width: 100%;
 	background-color: #2a2a2a;
 	overflow-y: auto;
+	list-style: none;
 }
 
 .burger-menu__link {
@@ -333,10 +333,9 @@ th {
 	font-size: 32px;
 	text-transform: uppercase;
 	letter-spacing: 5px;
-	color: rgb(255, 255, 255, 0.5);
 }
 
-.burger-menu__link:hover {
+.burger-menu__link a:hover {
 	color: rgb(255, 255, 255, 1);
 	text-decoration: none;
 	cursor: pointer;
@@ -360,83 +359,11 @@ th {
 	color: rgb(255, 255, 255, 1);
 }
 
+.unactive-link {
+	color: rgb(255, 255, 255, 0.6);
+}
+
 /*top bar styles*/
-/*
-.pages-titles {
-	list-style: none;
-	padding: 0;
-	white-space: nowrap;
-}
-
-.overflow {
-	position: absolute;
-	right: 0;
-	display: none;
-	z-index: 25;
-	top: 70px;
-}
-
-.overflow li{
-	display: block;
-	background-color: white;
-	box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
-	padding: 12px 16px;
-}
-
-.more {
-	display: none;
-	float: right;
-}
-
-.overflow li:hover {
-	background-color: #f1f1f1;
-}
-
-.main-header {
-	background-color: white;
-	padding-top: 20px;
-	height: 70px;
-	position: relative;
-	max-width: 750px;
-	margin: 0 auto;
-	display: flex;
-	align-items: center;
-}
-
-li {	
-	display: inline-block;
-	width: 100px;
-	text-align:center;
-	font-size: 20px;
-	padding-left: 10px;
-	text-overflow: ellipsis;
-	overflow: hidden;
-	cursor: pointer;
-	white-space: nowrap;
-}
-
-
-li:hover {	 
-	position: absolute;
-    width: auto;
-    background-color:#FFF;
-}
-
-li:hover + li {
-	margin-left: 100px;
-}
-
-li a {
-	color: gray;
-}
-
-li a:hover, .active {
-	text-decoration: none;
-	color: black;
-	border-bottom: 2px solid lightblue;
-}
-*/
-
 .main-header {
 	height: 60px;
 }
@@ -497,6 +424,8 @@ li a:hover, .active {
 	z-index: 25;
 	top: 100%;
 	list-style: none;
+	box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
+	padding-right: 40px;
 }
 
 .overflow li a {
@@ -510,12 +439,15 @@ li a:hover, .active {
 .overflow li {
 	margin: 0px 5px 5px;
 }
-/*
+
 @media screen and (max-width: 450px) {
 	.burger-menu__button {
 		display: inline-flex;
 	}
-	.pages-titles {
+	.nav_titles {
 		visibility: hidden;
 	}
-}*/
+	.company-logo {
+		margin-top: 15px;
+	}
+}
