--- a/css/main.css
+++ b/css/main.css
@@ -302,7 +302,8 @@ th {
 
 .burger-menu__button { 
 	display: none;
-	padding: 25px 10px 10px;
+	padding: 5px 20px 0px;
+	float: right;
 	color: gray;
 }
 
@@ -328,11 +329,12 @@ th {
 }
 
 .burger-menu__link {
-	padding: 30px;
+	padding: 10px;
 	font-family: sans-serif;
-	font-size: 32px;
+	font-size: 20px;
 	text-transform: uppercase;
-	letter-spacing: 5px;
+	letter-spacing: 2px;
+	word-break: break-word;
 }
 
 .burger-menu__link a:hover {
@@ -342,7 +344,7 @@ th {
 }
 
 .burger-menu__close {
-	padding: 0 30px;
+	padding: 0 10px;
 }
 
 .close__icon {
@@ -357,6 +359,7 @@ th {
 
 .active-link {
 	color: rgb(255, 255, 255, 1);
+	word-break: break-word;
 }
 
 .unactive-link {
@@ -368,7 +371,7 @@ th {
 	height: 60px;
 }
 
-.nav_titles {
+.navigation {
 	position: relative;
 	height: 50px;
 	display: flex;
@@ -377,7 +380,7 @@ th {
 	margin-top: 20px;
 }
 
-.nav_titles button {
+.navigation button {
 	background: none;
 	border: none;
 	outline: none;
@@ -402,12 +405,6 @@ th {
 	cursor: pointer;
 	white-space: nowrap;
 }
-.pages-titles li:hover{
-	overflow: auto; 
-	height: auto;
-	white-space: normal;
-	word-break: break-all;
-}
 
 .pages-titles li:hover + .pages-titles li{
 	padding-left: 100px; 
@@ -415,6 +412,31 @@ th {
 
 .pages-titles li a {
 	color: black;
+}
+/*
+.title_tooltip {
+	position: relative;
+}*/
+.title_tooltip::after {
+	background: rgba(255, 255, 255, 1);
+	border-radius: 8px 8px 8px 0px;
+	box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
+	color: black;
+	content: attr(data-tooltip); 
+	margin-top: -24px;
+	/*left: 0;
+	top: 0;*/
+	opacity: 0; 
+	padding: 3px 7px;
+	position: absolute;
+	visibility: hidden; 	
+	transition: all 0.4s ease-in-out; 
+}
+		
+.title_tooltip:hover::after {
+	opacity: 1;
+	visibility: visible;
+	/*top: 3em;*/
 }
 
 .overflow {
@@ -438,16 +460,19 @@ th {
 
 .overflow li {
 	margin: 0px 5px 5px;
+	max-width: 150px;
+	text-overflow: ellipsis;
+	overflow: hidden;
+	cursor: pointer;
+	white-space: nowrap;
 }
+
 
 @media screen and (max-width: 450px) {
 	.burger-menu__button {
 		display: inline-flex;
 	}
-	.nav_titles {
+	.navigation {
 		visibility: hidden;
-	}
-	.company-logo {
-		margin-top: 15px;
 	}
 }
