--- a/css/main.css
+++ b/css/main.css
@@ -98,7 +98,7 @@
 	text-align: center;
 	align-content: center;
 	border-bottom-style: solid;
-	border-color: lightgray;
+	border-color: rgb(211,211,211);
 	border-width: 1px;
 }
 
@@ -150,7 +150,7 @@
 	padding-top: 10px;
 	transition: 0.5s;
 	border-top-style: solid;
-	border-color: lightgray;
+	border-color: rgb(211,211,211);
 	border-width: 1px;
 }
 
@@ -209,7 +209,7 @@ th {
 }
 
 .result {
-	background-color: lightgray;
+	background-color: rgb(211,211,211);
 	width: 40px;
 	height: 25px;
 	line-height: 25px;
@@ -291,10 +291,6 @@ th {
 	font-size: 18px;
 	text-align: left;
 	padding: 10px;
-}
-
-.tile-data {
-	font-size: 20px;
 }
 
 /*burger menu*/
@@ -457,3 +453,16 @@ th {
 		visibility: hidden;
 	}
 }
+
+/*hightcharts styles*/
+.highcharts-figure .chart-container {
+	width: 200px;
+	height: 130px;
+	margin: 0 auto;
+}
+/*
+.highcharts-plot-border {
+	width: 200px;
+	height: 150px;
+	margin: 0 auto;
+}*/
