--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,6 @@
 	background-color: rgb(242, 242, 242);
 	overflow-y: auto;
 	z-index: 0;
-	
 }
 
 .main__title {
@@ -429,7 +428,6 @@ th {
 	white-space: nowrap;
 }
 
-
 @media screen and (max-width: 450px) {
 	.burger-menu__button {
 		display: inline-flex;
@@ -474,7 +472,7 @@ th {
 		background-color: white;
 		-webkit-print-color-adjust: exact; 
 		margin: auto !important;
-		
+		/*fix for FireFox*/
 		overflow: visible;
 	}
 	
@@ -502,4 +500,42 @@ th {
 	.filters-print {
 		display: block;
 	}
+}
+/*grid styles*/
+.grid-container { 
+	display: grid;
+	justify-content: center;
+
+	grid-auto-columns: 200px;
+	grid-auto-rows: 100px;
+	grid-auto-flow: column dense;
+	grid-gap: 1em;
+	
+}
+
+.grid-item {
+	box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
+}
+
+.grid-item:nth-child(1) {
+	background-color: #DFF2F6;
+}
+
+.grid-item:nth-child(2) {
+	background-color: #DFE7F6;
+}
+
+.grid-item:nth-child(3) {
+	background-color: #E3DFF6;
+
+}
+
+.grid-item:nth-child(4) {
+	background-color: #EFDFF6;
+}
+
+.grid-item:nth-child(5) {
+	background-color: #F6DFE7;
+	grid-column-end: span 2;
+	grid-row-end: span 2;
 }
