--- a/css/main.css
+++ b/css/main.css
@@ -504,38 +504,44 @@ th {
 /*grid styles*/
 .grid-container { 
 	display: grid;
-	justify-content: center;
-
-	grid-auto-columns: 200px;
-	grid-auto-rows: 100px;
-	grid-auto-flow: column dense;
-	grid-gap: 1em;
+	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 	
+	width: 80%;
+	margin: auto;
 }
 
 .grid-item {
+	height: 250px;
 	box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
+	margin: 10px;
 }
 
-.grid-item:nth-child(1) {
+.grid-item__1 {
 	background-color: #DFF2F6;
 }
 
-.grid-item:nth-child(2) {
+.grid-item__2 {
+	background-color: #DCE899;
+}
+
+.grid-item__3 {
+	background-color: #DFF2F6;
+}
+
+.grid-item__4 {
 	background-color: #DFE7F6;
 }
 
-.grid-item:nth-child(3) {
-	background-color: #E3DFF6;
-
-}
-
-.grid-item:nth-child(4) {
-	background-color: #EFDFF6;
-}
-
-.grid-item:nth-child(5) {
+.grid-item__5 {
 	background-color: #F6DFE7;
+	height: 510px;
+	
 	grid-column-end: span 2;
 	grid-row-end: span 2;
+}
+
+@media screen and (max-width: 624px) {
+  .grid-item__5 {
+    grid-column: auto;
+  }
 }
